Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
None
-
None
-
Can result in unexpected behaviour
Description
SET sql_mode=ORACLE; |
DELIMITER $$
|
CREATE OR REPLACE PROCEDURE p1 AS |
TYPE rec0_t IS RECORD (a INT, b INT); |
TYPE cur0_t IS REF CURSOR RETURN rec0_t; |
c0 cur0_t;
|
BEGIN
|
OPEN c0 FOR 'SELECT 1,2'; |
END; |
$$
|
DELIMITER ;
|
ERROR 4078 (HY000): Illegal parameter data types row<2> and row<0> for operation 'OPEN..FOR'
|
The above error message is unclear.
Note, it's correct that opening a strict cursor from a dynamic string not supported. But the error message should be clearer.
Attachments
Issue Links
- is caused by
-
MDEV-10152 Add support for TYPE .. IS REF CURSOR
-
- Closed
-
- relates to
-
MDEV-39022 Add `LOCAL spvar` syntax for prepared statements and SYS_REFCURSORs
-
- Closed
-